# DiceyGame

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
cmake/: utils.cmake
src/: CMakeLists.txt
src/core/: app.cpp  main.cpp
src/entities/: dice.cpp  dice.h
